fixed background whitespace

--- a/public/widescreen.css
+++ b/public/widescreen.css
@@ -7,6 +7,7 @@
 body {
   font-family: sans-serif;
   margin: 0;
+  background-color: black;
 }
 
 a {
@@ -270,7 +271,7 @@ button {
 }
 
 #options-main {
-  width: 70%;
+  width: 100vw;
   display: flex;
   justify-content: center;
   align-items: center;
